# CoNCISE

./: LICENSE  README.md  hubconf.py  setup.cfg
concise/: dataset.py  main.py  pretrained.py
concise/commands/: __init__.py  download.py  easy_query.py  protein_to_codes.py  query.py  smiles_to_codes.py
concise/model/: concise.py  drug_decoder.py  fsq.py
configs/: easy_query.yaml  proteins_to_codes.yaml  query.yaml  smiles_to_codes.yaml
data/: predicted-undruggables.txt  predicted_promiscuous_prots.tsv
data/DrugsMini/: codes.csv  codes.sqlite
data/QueryDrugsMini/: assignments.csv
data/SwissProtMini/: receptors.h5  scores.csv  seqs.fasta
notebooks/: model-test.ipynb
