[metadata]
name = concise_dti
version = 1.0.0
description = Learning a CoNCISE language for small-molecule binding
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rohitsinghlab/CoNCISE
author = Mert Erden
author_email = merterden97@gmail.com
authors = 
    "Kapil Devkota kapil.devkota@duke.edu"
license = 
license_files =
    LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy



[options]
packages = find:
install_requires =
    numpy<2
    pandas
    scikit-learn
    torch
    transformers
    tqdm
    matplotlib
    seaborn
    rdkit
    pytorch-lightning
    raygun
    typer
    hydra-core
    molfeat
python_requires = >=3.11

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    concise = concise.main:app


[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
parallel = true

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
